--- a/index.html
+++ b/index.html
@@ -1,88 +1,56 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
-<head>
-  <meta charset="utf-8">
-  <title>Mahmoud's Personal Site</title>
-</head>
-
-<body>
-  <table cellspacing="20">
-    <tr>
-      <td><img src="mahmoud.jpg" alt="Mahmoud Yhya" style="max-height:200px;"></td>
-      <td>
-        <h1>Mahmoud Yhya</h1>
-        <p><em>I'm a <strong>Web Developer & Web Designer</strong>, I have over 15 years experience in this field.</em></p>
-        <p>COFFEE <strong> >>> </strong> CODE <strong> >>> </strong> SLEEP <strong> >>> </strong> REPEAT</p>
-      </td>
-    </tr>
-  </table>
-  <hr>
-  <h3>My Skills & Programming Languages</h3>
-  <table cellspacing="10">
-    <tr>
-      <td>
-        <table>
-          <tr>
-            <td>HTML</td>
-            <td>⭐⭐⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <td>Javascript</td>
-            <td>⭐⭐⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <td>Node.js</td>
-            <td>⭐⭐⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <td>Angular</td>
-            <td>⭐⭐⭐</td>
-          </tr>
-        </table>
-      </td>
-      <td>
-        <table>
-          <tr>
-            <td>CSS</td>
-            <td>⭐⭐⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <td>PHP</td>
-            <td>⭐⭐⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <td>MySQL</td>
-            <td>⭐⭐⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <td>Mongoose</td>
-            <td>⭐⭐⭐</td>
-          </tr>
-        </table>
-      </td>
-    </tr>
-  </table>
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Great+Vibes|Montserrat" rel="stylesheet">
+    <link rel="icon" href="favicon.ico">
+    <title>Mahmoud Yhya</title>
+  </head>
+  <body>
+    <div class="top-container">
+      <img class="top-cloud" src="images/cloud.png" alt="Cloud">
+      <h1>I'm Mahmoud Yhya.</h1>
+      <h2 class="normal-weight">a programmer.</h2>
+      <img class="bottom-cloud" src="images/cloud.png" alt="Cloud">
+      <img src="images/mountain.png" alt="Cloud">
+    </div>
+    <div class="middle-container">
+      <div class="profile">
+        <img src="images/mahmoud.jpg" class="my-image" alt="Mahmoud Yhya">
+        <h2>Hello.</h2>
+        <p>I'm a web developer & a web designer, I ❤ photography and I've experience for more than 15 years in programming.</p>
+      </div>
+      <hr>
+      <div class="skills">
+        <h2>My Skills.</h2>
+        <div class="skill-row">
+          <img class="skill-image-1" src="images/data.png" alt="Web development">
+          <h3>Web developer</h3>
+          <p>I can create any website or web application with the best technology we've today.</p>
+        </div>
+        <div class="skill-row">
+          <img class="skill-image-2" src="images/camera.png" alt="">
+          <h3>Photography</h3>
+          <p>Photography is one of my best hobbies, Photography is like a different world.</p>
+        </div>
+      </div>
+      <hr>
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>I'll be happy to hear from you :)</h3>
+        <p>Please don't hesitate to contact me if you have any request.</p>
+        <a class="butn" href="mailto:admin@tasameemweb.com">CONTACT ME</a>
+      </div>
+    </div>
 
 
-  <h4><strong>I can build & design either a website or a web application.</strong></h4>
-  <hr>
-  <h3>Work Experience</h3>
-  <table cellspacing="10">
-    <tr>
-      <th>Date</th>
-      <th>Work</th>
-    </tr>
-    <tr>
-      <td>2003 - 2008</td>
-      <td>I've worked as IT Manager at Master Comapny in Alexandria</td>
-    </tr>
-    <tr>
-      <td>2009 - 2019</td>
-      <td>I've worked as Web Developer at WorldConnection in Qatar</td>
-    </tr>
-  </table>
-  <h3><a href="hobbies.html">My Hobbies</a> <a href="contact.html">Contact Me</a></h3>
-</body>
+    <div class="bottom-container">
+      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+      <a class="footer-link" href="https://twitter.com/">Twitter</a>
+      <a class="footer-link" href="http://www.tasameemweb.com/">TasameemWeb</a>
+      <p class="copy-right">© 2019 Mahmoud Yhya.</p>
+    </div>
 
+  </body>
 </html>
